[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "a key value store"
authors = ["sum dude <sum.dude@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.0.29", features = ["derive", "cargo"] }
predicates = "1.0.0"
