[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "a key value store"
authors = ["sum dude <sum.dude@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.0.29", features = ["derive", "cargo"] }
failure = { version = "0.1.8", features = ["derive", "failure_derive"] }
serde = "1.0.153"
serde_json = "1.0.94"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.3.0"
walkdir = "2.3.2"
